--- a/metro-central-service-eureka-client/src/main/resources/static/styles/logged.css
+++ b/metro-central-service-eureka-client/src/main/resources/static/styles/logged.css
@@ -1,16 +1,184 @@
 @charset "ISO-8859-1";
-body{
-	background-color: pink;
+*{
+	margin: 0;
+	padding:0;
+	font-family: sans-serif;
+}
+.banner {
+	width:100%;
+	height:100vh;
+	background-color: black;
+	background-size: cover;
+	background-position: center;
+}
+.content {
+	width:100%;
+	position:absolute;
+	top:50%;
+	transform:translateY(-50%);
+	text-align: center;
+	color: #fff;
+}
+.content h1 {
+	font-size: 70px;
+	margin-top:80px;
+}
+button {
+	width:200px;
+	padding:15px 0;
+	text-align: center;
+	margin: 20px 10px;
+	border-radius: 25px;
+	font-weight: bold;
+	border: 2px solid #009688;
+	background: transparent;
+	color: white;
+	cursor:pointer;
+	position:relative;
+	overflow: hidden;
+}
+span {
+	background:#009688;
+	height:100%;
+	width:0;
+	border-radius: 25px;
+	position:absolute;
+	left:0;
+	bottom:0;
+	z-index: -1;
+	transition: 0.5s;
+}
+button:hover span {
+	width:100%;
+}
+button:hover  {
+	border:none;
+}
+.loginform{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+max-width: 380px;
+width: 100%;
+height: auto;
+border-radius: 5px;
+padding: 40px 30px 40px 0;
+box-shadow: -4px -4px 11px #c8c2c2a2,
+            4px 4px 9px rgba(147, 149, 151, 0.871);
+}
+.loginform .title{
+font-size: 32px;
+text-transform: uppercase;
+font-weight: bold;
+text-align: center;
+color: #c9c3cd;
+margin-bottom: 35px;
+}
+.content .field{
+  height: 50px;
+  width: 100%;
+  padding-left: 0.5cm;
+  display: flex;
+  position: relative;
+  background-color: rgba(255,255,255,0.13);
+ backdrop-filter: blur(10px);
 }
 
-h1{
-	color: blue;
+.field input{
+  height: 100%;
+  width: 100%;
+ padding-left: 1cm;	
+  font-size: 18px;
+  outline: none;
+  border: none;
+  color: #e0d2d2;
+  border: 1px solid rgba(255, 255, 255, 0.438);
+  border-radius: 8px;
+  background: rgba(105, 105, 105, 0);
+}
+.field input::placeholder{
+  color: #e0d2d2a6;
 }
 
-hr{
-	color: gray;
+.field:nth-child(2){
+  margin-top: 20px;
 }
 
-h2{
-	color: navy;
+.field span{
+  position: absolute;
+  width: 50px;
+  line-height: 50px;
+  color: #ffffff;
+}
+.register{
+  margin: 25px 0 0 0;
+  width: 100%;
+  height: 50px;
+  color: rgb(238, 226, 226);
+  font-size: 18px;
+  font-weight: 600;
+  border: 2px solid rgba(255, 255, 255, 0.438);
+  border-radius: 8px;
+  background: rgba(105, 105, 105, 0);
+  margin-top: 40px;
+  outline: none;
+  cursor: pointer;
+  border-radius: 8px;
+ 
+}
+.content .or{
+  color: rgba(255, 255, 255, 0.733);
+  margin-top: 9px;
+}
+ input[type=submit] {
+	width:200px;
+	padding:15px 0;
+	text-align: center;
+	margin: 20px 10px;
+	border-radius: 25px;
+	font-weight: bold;
+	border: 2px solid #009688;
+	background: transparent;
+	color: white;
+	cursor:pointer;
+	position:relative;
+	overflow: hidden;
+}
+
+ input[type=submit]:hover span {
+	width:100%;
+}
+ input[type=submit]:hover  {
+	border:none;
+}
+.field select{
+  height: 100%;
+  width: 100%;
+ padding-left: 1cm;	
+  font-size: 18px;
+  outline: none;
+  border: none;
+  color: #e0d2d2;
+  border: 1px solid rgba(255, 255, 255, 0.438);
+  border-radius: 8px;
+  background: rgba(105, 105, 105, 0);
+}
+.field select::placeholder{
+  color: #e0d2d2a6;
+}
+.field option{
+  height: 100%;
+  width: 100%;
+ padding-left: 1cm;	
+  font-size: 18px;
+  outline: none;
+  border: none;
+  color: #e0d2d2;
+  border: 1px solid rgba(255, 255, 255, 0.438);
+  border-radius: 8px;
+  background: rgba(105, 105, 105, 0);
+}
+.field option::placeholder{
+  color: #e0d2d2a6;
 }
