--- a/metro-central-service-eureka-client/src/main/resources/templates/Display.html
+++ b/metro-central-service-eureka-client/src/main/resources/templates/Display.html
@@ -1,3 +1,4 @@
+<!-- 
 <!DOCTYPE html>
 <html xmlns:th="https://thymeleaf.org">
 <head>
@@ -13,5 +14,29 @@
 <h3 th:text="${message}"></h3><br><br>
 <a href="/menuDecider">Go back to menu page</a><br><br>
 <a href="/logout">!!! Sign Out !!!</a>
+</body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html xmlns:th="https://thymeleaf.org">
+<head>
+<meta charset="ISO-8859-1">
+<title>display page</title>
+<link th:href="@{/styles/logged.css}" rel="stylesheet">
+</head>
+<body class="banner">
+<div class="content">
+
+<div class=loginform>
+
+<h2 th:text="'Current Balance : Rs.'+${session.card.balance}"></h2>
+<hr>
+<h3 th:text="${message}"></h3><br><br>
+<a href="/index"><button type="button"><span></span> Menu Page </button></a><br><br>
+<a href="/logout"><button type="button"><span></span> SIGN OUT</button></a><br><br>
+</div>
+</div>
+
 </body>
 </html>
