--- a/metro-central-service-eureka-client/src/main/resources/templates/Home.html
+++ b/metro-central-service-eureka-client/src/main/resources/templates/Home.html
@@ -5,12 +5,15 @@
 <title>Metro System</title>
 <link th:href="@{/styles/logged.css}" rel="stylesheet">
 </head>
-<body>
+<body class="banner">
+<div class="content">
 <h1>Welcome to our Metro System</h1>
-<hr>
+<div>
+<a href="/login"><button type="button"><span></span>Login</button></a>
+<a href="/register"><button type="button"><span></span>Register</button></a><br><br>
+</div>
+</div>
 
-<a href="/login">Login</a><br><br>
-<a href="/register">Register New Metro-Card</a><br><br>
 
 <h3 th:text="${message}"></h3>
 
