--- a/metro-central-service-eureka-client/src/main/resources/templates/SwipedInIndex.html
+++ b/metro-central-service-eureka-client/src/main/resources/templates/SwipedInIndex.html
@@ -21,3 +21,33 @@
 <a href="/logout">!!! Sign Out !!!</a><br>
 </body>
 </html>
+
+
+<!-- 
+<!DOCTYPE html>
+<html xmlns:th="https://thymeleaf.org">
+<head>
+<meta charset="ISO-8859-1">
+<title>Metro System Menu</title>
+<link th:href="@{/styles/logged.css}" rel="stylesheet">
+</head>
+<body class="banner">
+<div class="content">
+
+<div class=loginform>
+
+
+<h4 th:text="${message}"></h4><br>
+<h3 class = "title">Hope you are had nice journey</h3>
+<h3 class="title">Swipe Out</h3>
+
+
+<a href="/swipeOut"><button type="button"><span></span>Swipe Out</button></a><br><br>
+<a href="/rechargeCard"><button type="button"><span></span>Recharge</button></a><br><br>
+<a href="/showAllPreviousTransactions"><button type="button"><span></span>Previous Transactions</button></a><br><br>
+<br><br>
+
+<a href="/logout"><button type="button"><span></span> SIGN OUT</button></a><br><br>
+</body>
+</html>
+-->
